@@ -1,4 +1,3 @@
-// src/main/java/com/smokefree/program/domain/service/EnrollmentServiceImpl.java
 package com.smokefree.program.domain.service;
 
 import com.smokefree.program.domain.model.*;
@@ -19,6 +18,7 @@ import java.time.ZoneOffset;
 import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors; // Add this import
 
 @Service
 @RequiredArgsConstructor
@@ -31,19 +31,35 @@ public class EnrollmentServiceImpl implements EnrollmentService {
     private final BaselineResultService baselineResultService;
     private final PlanQuizScheduleRepository planQuizScheduleRepository;
     private final QuizAssignmentRepository quizAssignmentRepository;
+    private final BadgeService badgeService;
 
+    /**
+     * Starts a new program (Trial or Paid) for a user.
+     * <p>
+     * Flow:
+     * 1. Check Baseline: User must have completed the onboarding quiz.
+     * 2. Check Existing: User cannot have another ACTIVE program.
+     * 3. Validate Template: Ensure the requested PlanTemplate exists.
+     * 4. Create Program: Initialize Program entity (Trial vs Paid logic).
+     * 5. Assign Steps: Link program to daily steps.
+     * 6. Assign Quizzes: Batch create default quizzes based on the template schedule.
+     * </p>
+     */
     @Override
     @Transactional
     public EnrollmentRes startTrialOrPaid(UUID userId, StartEnrollmentReq req) {
+        // 1. Validation: Baseline is mandatory
         if (!baselineResultService.hasBaseline(userId)) {
             throw new ValidationException("Onboarding quiz is required before starting a program");
         }
 
+        // 2. Validation: No concurrent active programs allowed
         programRepo.findFirstByUserIdAndStatusAndDeletedAtIsNull(userId, ProgramStatus.ACTIVE)
                 .ifPresent(p -> {
                     throw new ConflictException("User already has an ACTIVE program");
                 });
 
+        // 3. Load Plan Template
         UUID templateId = req.planTemplateId();
         if (templateId == null) {
             throw new ValidationException("planTemplateId is required");
@@ -55,6 +71,7 @@ public class EnrollmentServiceImpl implements EnrollmentService {
         String planCode = template.getCode();
         int planDays = template.getTotalDays();
 
+        // 4. Create Program Entity
         Program p;
         if (Boolean.TRUE.equals(req.trial())) {
             p = programCreationService.createTrialProgram(userId, planDays, 7, null);
@@ -66,8 +83,12 @@ public class EnrollmentServiceImpl implements EnrollmentService {
         p.setTemplateName(template.getName());
         p = programRepo.save(p);
 
+        // 5. Assign Content & Quizzes
         stepAssignmentService.createForProgramFromTemplate(p, template);
         assignSystemQuizzes(p);
+        
+        // Check Badge Level 1 (Start)
+        badgeService.checkProgramMilestone(p);
 
         Instant trialUntil = p.getTrialEndExpected();
         Instant startAt = p.getStartDate() == null
@@ -95,13 +116,13 @@ public class EnrollmentServiceImpl implements EnrollmentService {
         return programs.stream().map(p -> new EnrollmentRes(
                 p.getId(),
                 p.getUserId(),
-                null,
-                null,
+                p.getPlanTemplateId(), // Added back p.getPlanTemplateId()
+                p.getTemplateCode(),   // Added back p.getTemplateCode()
                 p.getStatus().name(),
                 p.getStartDate() == null ? null : p.getStartDate().atStartOfDay(ZoneOffset.UTC).toInstant(),
                 null,
                 p.getTrialEndExpected()
-        )).toList();
+        )).collect(Collectors.toList()); // Use .collect(Collectors.toList())
     }
 
     @Override
@@ -149,6 +170,14 @@ public class EnrollmentServiceImpl implements EnrollmentService {
         );
     }
 
+    /**
+     * Assigns default quizzes from the PlanTemplate to the new Program.
+     * <p>
+     * Optimization: Uses "Batch Fetch & Filter" pattern to avoid N+1 SELECT/INSERT issues.
+     * Instead of checking existence one-by-one, it loads all existing assignments into memory
+     * and filters the new ones before performing a single 'saveAll'.
+     * </p>
+     */
     private void assignSystemQuizzes(Program program) {
         UUID planTemplateId = program.getPlanTemplateId();
         if (planTemplateId == null) {
@@ -156,9 +185,18 @@ public class EnrollmentServiceImpl implements EnrollmentService {
         }
 
         List<PlanQuizSchedule> schedules = planQuizScheduleRepository.findByPlanTemplateIdOrderByStartOffsetDayAscOrderNoAsc(planTemplateId);
+        
+        // Optimization: Fetch all existing assignments once to avoid N+1 queries
+        java.util.Set<UUID> existingTemplateIds = quizAssignmentRepository.findByProgramId(program.getId())
+                .stream()
+                .map(com.smokefree.program.domain.model.QuizAssignment::getTemplateId)
+                .collect(java.util.stream.Collectors.toSet());
+
+        List<com.smokefree.program.domain.model.QuizAssignment> newAssignments = new java.util.ArrayList<>();
+
         for (PlanQuizSchedule schedule : schedules) {
-            if (!quizAssignmentRepository.existsByTemplateIdAndProgramId(schedule.getQuizTemplateId(), program.getId())) {
-                QuizAssignment assignment = new QuizAssignment();
+            if (!existingTemplateIds.contains(schedule.getQuizTemplateId())) {
+                com.smokefree.program.domain.model.QuizAssignment assignment = new com.smokefree.program.domain.model.QuizAssignment();
                 assignment.setId(UUID.randomUUID());
                 assignment.setProgramId(program.getId());
                 assignment.setTemplateId(schedule.getQuizTemplateId());
@@ -174,8 +212,12 @@ public class EnrollmentServiceImpl implements EnrollmentService {
                 assignment.setActive(true);
                 assignment.setCreatedAt(Instant.now());
 
-                quizAssignmentRepository.save(assignment);
+                newAssignments.add(assignment);
             }
+        }
+
+        if (!newAssignments.isEmpty()) {
+            quizAssignmentRepository.saveAll(newAssignments);
         }
     }
 }
